# mousegame

./: .gitignore  Cargo.toml  devenv.nix
levels/: level1  level2  level3  level4
src/: level.rs  main.rs  networking.rs
src/game/: level.rs  mod.rs  object.rs  physics.rs  serde.rs  state.rs
static/: game.js  index.html
web/: entity.js  game.js  index.html  level.js  math.js
