[package]
name = "mouse_game"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
tower-http = { version = "0.6", features = ["fs"] }
uuid = { version = "1.18", features = ["v4"] }
bytemuck = "1.23"
glam = { version = "0.30", features = ["serde"] }
rapier2d = { version = "0.29", features = ["serde-serialize"] }
lilypads = "0.10.6"
parking_lot = "0.12"
serde = "1.0"
serde_json = "1.0"
